[package]
name = "pot"
version = "0.3.0"
authors = ["Anthony slab <contact@anthonyslab.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"]}
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"]}
toml = "0.7.4"
serde = { version = "1.0.163", features = ["derive"]}
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite", "offline"]}
rand = "0.8.5"
chrono = "0.4.25"
once_cell = "1.18.0"
lazy_static = "1.4.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
debug = false
panic = 'abort'
