[package]
name = "pot"
version = "0.4.0"
authors = ["Anthony slab <contact@anthonyslab.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"]}
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector", "http"]}
toml = "0.7.4"
serde = { version = "1.0.163", features = ["derive"]}
rand = "0.8.5"
chrono = "0.4.25"
once_cell = "1.18.0"
lazy_static = "1.4.0"
ndm = "0.9.9" 

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
debug = false
